2004-09-13  Paul Brook  <paul@codesourcery.com>

	* bfd-in.h (bfd_elf32_arm_process_before_allocation): Update
	prototype.
	* bfd-in2.h: Regenerate.
	* libbfd.h: Regenerate.
	* elf32-arm.h (elf32_arm_link_hash_table): Add target1_is_rel.
	(elf32_arm_link_hash_table_create): Set target1_is_rel.
	(bfd_elf32_arm_process_before_allocation): Ditto.
	(elf32_arm_final_link_relocate): Handle R_ARM_TARGET1.
	(elf32_arm_gc_sweep_hook, elf32_arm_check_relocs): Ditto.
	* elfarm-nabi.c (elf32_arm_howto_table): Rename RELABS to TARGET1.
	* reloc.c: Ditto.

2004-09-10  Joel Brobecker  <brobecker@gnat.com>

	* hpux-core.c (thread_section_p): New function.
	(hpux_core_core_file_p): Fix computation of offset in call
	to bfd_seek. Create a ".reg" section from an arbitrary
	".reg/<id>" section if none was created after having read
	all sections.

2004-09-11  Andreas Schwab  <schwab@suse.de>

	* acinclude.m4: Fix spelling of ACX_NONCANONICAL_*.
	* aclocal.m4: Rebuild.
	* configure: Rebuild.

2004-09-10  Joel Brobecker  <brobecker@gnat.com>

	* section.c (bfd_sections_find_if): Fix parameter name in
	comment to match code.

2004-09-10  Alan Modra  <amodra@bigpond.net.au>

	* elf.c  (assign_file_positions_except_relocs): Assign relocs
	stored in a bfd section.

2004-09-08  Hans-Peter Nilsson  <hp@axis.com>

	* elf32-cris.c (elf_cris_adjust_gotplt_to_got): Reset
	h->gotplt_refcount to 0, not -1.

2004-09-07  Hans-Peter Nilsson  <hp@axis.com>

	* elf32-cris.c (cris_elf_relocate_section) <case R_CRIS_16_GOTPLT,
	case R_CRIS_32_GOTPLT>: For internal error message, handle NULL
	symname.
	(cris_elf_check_relocs) <case R_CRIS_32_PLT_PCREL>: Don't try to
	handle symbol visibility here.

2004-09-07  Alan Modra  <amodra@bigpond.net.au>

	* elf64-ppc.c (struct ppc_link_hash_table): Add stub_globals.
	(is_ppc64_elf_target): Rename from is_ppc64_target.  Update all
	callers.
	(ppc_stub_name): Remove trailing "+0" on stub name.
	(create_linkage_sections): Create relocations for